add opacity on last slide

--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,7 @@ body {
   height: 96px;
   z-index: 10; }
 
-.opacity {
+.slick-active + .slick-active + .slick-active + .slick-active {
   opacity: 0.3; }
 
 /* Typography */
